[package]
name = "pcapng-writer"
version = "0.1.0"
description = "An implementation of the pcapng capture file format encoding"
repository = "https://github.com/alirez/pcapng-writer"
authors = ["alirez"]
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "^1.3.4"

[dev-dependencies]
pcapng = "^1.0.0"
nom = "^2.0"
